--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         </div>
                         <div>
                             <h4 class="dark:text-white light:text-black font-black uppercase text-[10px] tracking-widest mb-1">HQ</h4>
-                            <p class="text-gray-400 dark:text-gray-400 light:text-gray-600 font-bold">San Francisco, CA</p>
+                            <p class="text-gray-400 dark:text-gray-400 light:text-gray-600 font-bold">Abuja Nigeria, ABJ</p>
                         </div>
                     </div>
                 </div>
