Add service and overview sections to index.html

--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
                 </div>
             </div>
         </section>
-
+        <h2 class="relative text-center text-2xl font-bold transition-colors duration-400 text-black dark:text-white">
+  Our Services
+  <span class="block mx-auto mt-2 h-1 w-12 rounded-full transition-all duration-400 bg-[#c1ff00] dark:bg-accent"></span>
+</h2>
         <section id="advantages" class="py-24 px-6 bg-opacity-50">
           <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-3 gap-12">
             <div class="premium-card p-12 rounded-[3.5rem]" data-aos="fade-up">
@@ -211,7 +214,10 @@
             </div>
           </div>
         </section>
-
+        <h2 class="relative text-center text-2xl font-bold transition-colors duration-400 text-black dark:text-white">
+  Overview
+  <span class="block mx-auto mt-2 h-1 w-12 rounded-full transition-all duration-400 bg-[#c1ff00] dark:bg-accent"></span>
+</h2>
         <section id="receptionist" class="py-32 px-6 border-t border-white/5">
             <div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-center gap-24">
                 <div class="lg:w-1/2" data-aos="fade-right">
