--- a/index.html
+++ b/index.html
@@ -177,45 +177,76 @@
             </div>
         </section>
         <h2 class="relative text-center text-2xl font-bold transition-colors duration-400 text-black dark:text-white">
-  Our Services
+  Tansform Your Business With Our Services
   <span class="block mx-auto mt-2 h-1 w-12 rounded-full transition-all duration-400 bg-[#c1ff00] dark:bg-accent"></span>
 </h2>
         <section id="advantages" class="py-24 px-6 bg-opacity-50">
-          <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-3 gap-12">
-            <div class="premium-card p-12 rounded-[3.5rem]" data-aos="fade-up">
-              <i class="fa-solid fa-bolt-lightning accent-color text-4xl mb-10"></i>
-              <h3 class="text-2xl font-black mb-6 uppercase italic">Zero Latency</h3>
-              <p class="text-gray-500 leading-relaxed font-medium">Capture leads in real-time. MetaEdge bots engage visitors in under 1 second.</p>
-            </div>
-            <div class="premium-card p-12 rounded-[3.5rem]" data-aos="fade-up" data-aos-delay="200">
-              <i class="fa-solid fa-calendar-check accent-color text-4xl mb-10"></i>
-              <h3 class="text-2xl font-black mb-6 uppercase italic">Auto-Booking</h3>
-              <p class="text-gray-500 leading-relaxed font-medium">Direct synchronization with your calendar. AI qualifies and sets appointments.</p>
-            </div>
-            <div class="premium-card p-12 rounded-[3.5rem]" data-aos="fade-up" data-aos-delay="400">
-              <i class="fa-solid fa-chart-pie accent-color text-4xl mb-10"></i>
-              <h3 class="text-2xl font-black mb-6 uppercase italic">Cost Reduction</h3>
-              <p class="text-gray-500 leading-relaxed font-medium">Replace expensive live-chat teams with one intelligent integration.</p>
-            </div>
-            <div class="premium-card p-12 rounded-[3.5rem]" data-aos="fade-up">
-              <i class="fa-solid fa-headset accent-color text-4xl mb-10"></i>
-              <h3 class="text-2xl font-black mb-6 uppercase italic">24/7 Support</h3>
-              <p class="text-gray-500 leading-relaxed font-medium">Provide instant assistance around the clock. Help anytime, anywhere.</p>
-            </div>
-            <div class="premium-card p-12 rounded-[3.5rem]" data-aos="fade-up" data-aos-delay="200">
-              <i class="fa-solid fa-language accent-color text-4xl mb-10"></i>
-              <h3 class="text-2xl font-black mb-6 uppercase italic">Multi-Language</h3>
-              <p class="text-gray-500 leading-relaxed font-medium">Serve global customers effortlessly in multiple languages.</p>
-            </div>
-            <div class="premium-card p-12 rounded-[3.5rem]" data-aos="fade-up" data-aos-delay="400">
-              <i class="fa-solid fa-brain accent-color text-4xl mb-10"></i>
-              <h3 class="text-2xl font-black mb-6 uppercase italic">Self-Learning AI</h3>
-              <p class="text-gray-500 leading-relaxed font-medium">The system improves with every interaction for smarter responses.</p>
-            </div>
-          </div>
+  <div
+    class="max-w-[90rem] mx-auto grid
+           grid-cols-1
+           md:grid-cols-2
+           lg:grid-cols-3
+           gap-14 lg:gap-16"
+  >
+
+    <!-- Card 1 -->
+    <div class="premium-card p-12 rounded-[3.5rem] h-full flex flex-col" data-aos="fade-up">
+      <i class="fa-solid fa-bolt-lightning accent-color text-4xl mb-10"></i>
+      <h3 class="text-2xl font-black mb-6 uppercase italic">Zero Latency</h3>
+      <p class="text-gray-500 leading-relaxed font-medium">
+        Capture leads in real-time. MetaEdge bots engage visitors in under 1 second.
+      </p>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="premium-card p-12 rounded-[3.5rem] h-full flex flex-col" data-aos="fade-up" data-aos-delay="150">
+      <i class="fa-solid fa-calendar-check accent-color text-4xl mb-10"></i>
+      <h3 class="text-2xl font-black mb-6 uppercase italic">Auto-Booking</h3>
+      <p class="text-gray-500 leading-relaxed font-medium">
+        Direct synchronization with your calendar. AI qualifies and sets appointments.
+      </p>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="premium-card p-12 rounded-[3.5rem] h-full flex flex-col" data-aos="fade-up" data-aos-delay="300">
+      <i class="fa-solid fa-chart-pie accent-color text-4xl mb-10"></i>
+      <h3 class="text-2xl font-black mb-6 uppercase italic">Cost Reduction</h3>
+      <p class="text-gray-500 leading-relaxed font-medium">
+        Replace expensive live-chat teams with one intelligent integration.
+      </p>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="premium-card p-12 rounded-[3.5rem] h-full flex flex-col" data-aos="fade-up">
+      <i class="fa-solid fa-headset accent-color text-4xl mb-10"></i>
+      <h3 class="text-2xl font-black mb-6 uppercase italic">24/7 Support</h3>
+      <p class="text-gray-500 leading-relaxed font-medium">
+        Provide instant assistance around the clock. Help anytime, anywhere.
+      </p>
+    </div>
+
+    <!-- Card 5 -->
+    <div class="premium-card p-12 rounded-[3.5rem] h-full flex flex-col" data-aos="fade-up" data-aos-delay="150">
+      <i class="fa-solid fa-language accent-color text-4xl mb-10"></i>
+      <h3 class="text-2xl font-black mb-6 uppercase italic">Multi-Language</h3>
+      <p class="text-gray-500 leading-relaxed font-medium">
+        Serve global customers effortlessly in multiple languages.
+      </p>
+    </div>
+
+    <!-- Card 6 -->
+    <div class="premium-card p-12 rounded-[3.5rem] h-full flex flex-col" data-aos="fade-up" data-aos-delay="300">
+      <i class="fa-solid fa-brain accent-color text-4xl mb-10"></i>
+      <h3 class="text-2xl font-black mb-6 uppercase italic">Self-Learning AI</h3>
+      <p class="text-gray-500 leading-relaxed font-medium">
+        The system improves with every interaction for smarter responses.
+      </p>
+    </div>
+
+  </div>
         </section>
         <h2 class="relative text-center text-2xl font-bold transition-colors duration-400 text-black dark:text-white">
-  Overview
+  An Overview Of What We Offer And How It Helps You Grow
   <span class="block mx-auto mt-2 h-1 w-12 rounded-full transition-all duration-400 bg-[#c1ff00] dark:bg-accent"></span>
 </h2>
         <section id="receptionist" class="py-32 px-6 border-t border-white/5">
