Improve MetaEdge integration description
Enhanced the description of the MetaEdge integration to emphasize its role in engaging users and improving conversion rates.

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                     </h2>
                     <p class="text-gray-400 text-lg mb-12 leading-relaxed font-medium">
                         Our MetaEdge integration acts as your digital gatekeeper. It greets visitors, answers questions, and qualifies leads.
+By intelligently engaging users the moment they arrive, it ensures only high-intent prospects move forward, saving your team time while increasing conversion rates.
                     </p>
                     <div class="grid grid-cols-2 gap-8">
                         <div class="flex items-center gap-4">
