Update HTML class and card background color
Changed HTML class from 'light' to 'dark' and updated card background color.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="light"> <head>
+<html lang="en" class="dark"> <head>
+ html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MetaEdge AI | Premium 24/7 Intelligent Receptionist</title>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,9 +22,10 @@
                     },
                     colors: {
                         brand: '#000000',
-                        accent: '#3b82f6', // Your original Blue
-                        accentLight: '#c1ff00', // New Lime
-                        cardBg: '#0a0a0a'
+                        accent: '#3b82f6',
+                        accentLight: '#c1ff00',
+                        cardBg: '#f9f9f9',
+                        cardBgDark: '#0a0a0a'
                     }
                 }
             }
