--- a/index.html
+++ b/index.html
@@ -431,6 +431,8 @@ By intelligently engaging users the moment they arrive, it ensures only high-int
         <div class="relative premium-card p-16 rounded-[4rem] max-w-sm w-full text-center">
             <div class="w-20 h-20 accent-bg rounded-full flex items-center justify-center mx-auto mb-8 text-white"><i class="fa-solid fa-check text-4xl"></i></div>
             <h3 class="text-2xl font-black mb-4 uppercase italic">Request Sent.</h3>
+            <p class="text-sm font-gray italic mb-2 "> We will reach out soon, make sure to check your mail in the next <span class="text-[#ADF802] dark:text-accent">2 hours</span></p>
+           
             <button onclick="closeModal()" class="w-full bg-white text-black py-4 rounded-xl font-black uppercase text-[10px]">Back to Site</button>
         </div>
     </div>
